--- a/checkletters/checkletters.html
+++ b/checkletters/checkletters.html
@@ -7,7 +7,7 @@
     <script src="script.js"></script>
 </head>
 <body>
-    <label class="square-lb" for="square">ТЕКСТ</label>
+    <label class="square-lb" for="square">ТЕКСТ ЛАТИНИЦА</label>
     <input type="text" id="texts" name="square" onchange="separLetters()">
     <p>Гласные</p>
     <p id="vowel"></p>
