--- a/IPlocation/index.html
+++ b/IPlocation/index.html
@@ -38,8 +38,8 @@
            var url = 'https://ipapi.co/json/';
            var html = '';
            requestIp(url,function(data){
-            console.log(data);
-            var obj = data;
+            console.log(data.result[0]);
+            var obj = data.result[0];
             html += '<div><div>'+obj.network+'</div></div>'
             html += '</div>'
             dv1.innerHTML = html
