--- a/IPlocation/index.html
+++ b/IPlocation/index.html
@@ -34,11 +34,11 @@
        .input{display: block; padding: 5px; align-items: center; width: 340px; margin-bottom: 10px;
         font-family: "Roboto", sans-serif;
        font-weight: 1,500;}
-       #staTe{width: 300px; margin-bottom: 10px; padding: 5px; border-radius: 10px; background: rgb(222, 220, 217);}
+       #staTe{width: 295px; margin-bottom: 10px; padding: 5px; border-radius: 10px; background: rgb(222, 220, 217); 
+        height: 30px;}
        .btn2{padding: 5px; border-radius: 10px; background: rgb(222, 220, 217); width: 310px; font-family: "Roboto", sans-serif;
          font-size: 24px;}
-       .iptest{padding: 2px; margin-left: 5px; width: 300px; border: 1px solid black; background: rgb(222, 220, 217); display: block;
-        border-radius: 10px; text-align: center;}
+       .iptest{padding: 2px; margin-left: 5px; width: 300px; border: 1px solid black; background: rgb(222, 220, 217); display: block; border-radius: 10px; text-align: center; font-size: 24px;}
        .iptest p{padding: 1px; margin: 0;}
     </style>
 </head>
