--- a/IPlocation/index.html
+++ b/IPlocation/index.html
@@ -46,7 +46,7 @@
     <div class="big">
         <div class="input">
             <input type="text" id="staTe" >
-            <button onclick="showValue()" class="btn2">Определить другой IP</button>
+            <button onclick="showValue()" id="btn2">Определить другой IP</button>
         </div>
         <div class="iptest">
             <p>IP for testing </p>  
